Port to Minecraft 26.1.2